--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,54 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+
+    <!--通用自定义间距-->
+    <dimen name="zero">0dp</dimen>
+    <dimen name="ten">10dp</dimen>
+    <dimen name="one">1dp</dimen>
+    <dimen name="two">2dp</dimen>
+    <dimen name="three">3dp</dimen>
+    <dimen name="four">4dp</dimen>
+    <dimen name="five">5dp</dimen>
+    <dimen name="six">6dp</dimen>
+    <dimen name="eight">8dp</dimen>
+    <dimen name="fifteen">15dp</dimen>
+    <dimen name="sixteen">16dp</dimen>
+    <dimen name="seventeen">17dp</dimen>
+    <dimen name="eighteen">18dp</dimen>
+    <dimen name="twenty">20dp</dimen>
+    <dimen name="tweenty">22dp</dimen>
+    <dimen name="twenty_four">24dp</dimen>
+    <dimen name="tweenty_six">26dp</dimen>
+    <dimen name="tweenty_eight">28dp</dimen>
+    <dimen name="thirty">30dp</dimen>
+    <dimen name="forty">40dp</dimen>
+    <dimen name="forty_two">42dp</dimen>
+    <dimen name="forty_four">44dp</dimen>
+    <dimen name="advance_spin">38dp</dimen>
+    <dimen name="advance_hei">36dp</dimen>
+    <dimen name="fifty">50dp</dimen>
+    <dimen name="sys_button_height">44dp</dimen>
+    <dimen name="sixty">60dp</dimen>
+    <dimen name="advance_wid">64dp</dimen>
+    <dimen name="sixty_eight">68dp</dimen>
+    <dimen name="tabao_wid">68dp</dimen>
+    <dimen name="seventy">70dp</dimen>
+    <dimen name="seventy_two">74dp</dimen>
+    <dimen name="eighty">80dp</dimen>
+    <dimen name="ninety">90dp</dimen>
+    <dimen name="one_hundred">100dp</dimen>
+    <dimen name="one_hundred_twenty">120dp</dimen>
+    <dimen name="one_hundred_sixty">160dp</dimen>
+    <dimen name="one_hundred_eighty">180dp</dimen>
+    <dimen name="three_hundred_ten">310dp</dimen>
+    <dimen name="menu_button">150dp</dimen>
+    <dimen name="vertical_space">3.0dip</dimen>
+    <dimen name="carline_len">60dp</dimen>
+    <dimen name="tenth">10dp</dimen>
+    <dimen name="twelve">12dp</dimen>
+    <dimen name="two_hundred">200dp</dimen>
+
+    <!--专用自定义间距-->
+    <dimen name="dialog_width">280dp</dimen>
 </resources>
