--- a/app/src/main/res/layout/activity_test_main.xml
+++ b/app/src/main/res/layout/activity_test_main.xml
@@ -15,4 +15,14 @@
         android:textSize="20sp"
         android:id="@+id/test_textView"/>
 
+    <Button
+        android:text="点击"
+        android:textSize="18sp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/test_textView"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="52dp"
+        android:id="@+id/button" />
+
 </RelativeLayout>
